# UFG_Estudo_caso_2025

./: README-01.md  README.md  UFG_RAG_Aula02_Sala.ipynb
Outros trabalhos/malwere/: hello.py
QRcode/: pyproject.toml  qrcode.py
malwere/: Malware e Segurança Digital .docx  README.md  UV_REFERENCE_GUIDE.md  Valida .csv  main.py  malware_segurança_digital.ipynb  pyproject.toml
