[project]
name = "malwere"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.2",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.15.0",
    "seaborn>=0.12.0",
    "matplotlib>=3.7.0",
    "scipy>=1.11.0",
    "scikit-learn[extra]>=1.3.0",
]
